--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,8 @@
+$max-width: 1200px;
 $sidebar-width: 360px;
 $background-color: #efefef;
-$icon-color: A7A7A7; // Don't add the hash sign
-$accent-color: #42A5EE;
+/*$accent-color: #42A5EE;*/
+$accent-color: #FFFFFF;
 
 @mixin greenTick() {
   content: '';
@@ -41,7 +42,7 @@ ul {
   list-style: none;
 }
 
-input[type="checkbox"] {
+/*input[type="checkbox"] {
   display: inline-block;
   float: left;
   width: 24px;
@@ -59,12 +60,12 @@ input[type="checkbox"] {
   &:checked:before {
     @include greenTick();
   }
-}
+}*/
 
 
 header {
   padding: 0 1em;
-  max-width: 1200px;
+  max-width: $max-width;
   margin: auto;
   
   a {
@@ -81,7 +82,9 @@ header {
 }
 .app {
   padding: 1em;
-  max-width: 1200px;
+  max-width: $max-width;
+  width: 100%;
+	min-height: 900px;
   margin: auto;
   position: relative;
   
@@ -98,7 +101,6 @@ header {
 	    appearance: none;
 	    border: none;
 	    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-	    /*background: #fff url("data:image/svg+xml;utf8,<svg width=\'48\' height=\'48\' viewBox=\'0 0 48 48\' xmlns=\'http://www.w3.org/2000/svg\'><title>Shape</title><path d=\'M47.008 41.814L32.016 27.13c1.754-2.77 2.68-5.97 2.68-9.263 0-9.565-7.783-17.35-17.348-17.35C7.783.518 0 8.302 0 17.868c0 9.565 7.783 17.346 17.348 17.346 3.654 0 7.15-1.133 10.127-3.28l14.908 14.604c.62.61 1.44.945 2.313.945.896 0 1.736-.354 2.363-.994 1.273-1.302 1.25-3.398-.052-4.674zm-29.66-11.396c-6.92 0-12.55-5.63-12.55-12.55 0-6.92 5.63-12.55 12.55-12.55 6.92 0 12.55 5.63 12.55 12.55 0 3.258-1.243 6.346-3.5 8.695-2.39 2.486-5.605 3.855-9.05 3.855z\' fill=\'%23#{$icon-color}\' fill-rule=\'evenodd\'/></svg>")no-repeat center right 24px / 32px;*/
 	    border-radius: 4px;
 	  }
 	}
@@ -117,6 +119,7 @@ header {
   	.header-filler {
   		border-bottom: 1px solid #efefef;
   		overflow: hidden;
+  		padding-top: 1.6em;
   	}
   }
   
@@ -139,9 +142,14 @@ header {
   }
   
   .facets {
+  	width: 100%;
   	float: left;
   	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-	  /*.categories,*/
+  	
+  	&.noResults {
+  		background: #FFFFFF;
+  	}
+    
     .facet.facet_food_type,
     .facet.facet_selected_payment_options{
       label{
@@ -263,7 +271,6 @@ header {
   .results, .page {
     position: relative;
     margin-right: 0;
-    /* max-width: calc(100% - #{$sidebar-width}); */
     width: 100%;
     overflow: auto;
     padding: 1em;
@@ -280,17 +287,6 @@ header {
       /*border-bottom: 1px solid #efefef;*/
       /*padding-left: 2.5em;*/
       position: relative;
-      
-     /* &:before {
-        display: block;
-        float: left;
-        content: '';
-        width: 2.5em;
-        height: 1em;
-        position: absolute;
-        left: 0;
-        background: url("data:image/svg+xml;utf8,<svg viewBox=\'0 0 37 61\' xmlns=\'http://www.w3.org/2000/svg\'><title>Shape</title><path d=\'M10.87 58.832l24.328-24.33c.027-.025.065-.033.09-.06 1.147-1.146 1.716-2.66 1.712-4.17.004-1.51-.564-3.023-1.71-4.17-.028-.027-.065-.034-.092-.06L10.868 1.713C8.585-.57 4.846-.57 2.562 1.714.278 4 .277 7.738 2.56 10.022l20.252 20.25L2.56 50.525c-2.285 2.285-2.285 6.024 0 8.308 2.285 2.285 6.024 2.285 8.31 0z\' fill=\'%23#{$icon-color}\' fill-rule=\'evenodd\'/></svg>")no-repeat center center / contain;
-      }*/
     }
   
     em {
@@ -364,7 +360,7 @@ header {
   	vertical-align: top;
     text-align: center;
     width: 100%;
-    bottom: 20px;
+    margin-bottom: 20px;
     button {
       /*background: $accent-color;*/
       background: #FFFFFF;
@@ -428,9 +424,11 @@ span.stars span {
 .flex-column.nav{
   flex: 0 0 $sidebar-width;
   border-right: 2px solid #e6e6e6;
+  background: #FFFFFF;
 }
 .flex-column.content{
   flex: 1;
-  background-color: white;
+  background-color: #FFFFFF;
   position: relative;
+  min-height: 400px;
 }
