--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,7 @@
-$max-width: 1200px;
-$sidebar-width: 360px;
+/*$max-width: 1200px;*/
+$max-width: 100%;
+/*$sidebar-width: 360px;*/
+$sidebar-width: 30%;
 $background-color: #efefef;
 /*$accent-color: #42A5EE;*/
 $accent-color: #FFFFFF;
@@ -108,6 +110,11 @@ header {
 	.header {
   	overflow: hidden;
   	padding: 0px;
+  	
+  	.facet-toggle {
+  		cursor: pointer;
+  		vertical-align: -webkit-baseline-middle;
+  	}
   	.header-results {
   		float: left;
   		border-bottom: none;
@@ -119,7 +126,7 @@ header {
   	.header-filler {
   		border-bottom: 1px solid #efefef;
   		overflow: hidden;
-  		padding-top: 1.6em;
+  		padding-top: 2.5em;
   	}
   }
   
